	   '--no-resolution-adjustment'   Don't use resolution adjustment
	   '--speed-percent [percent]'   change the replaying speed
	   '--pause-key [k m]'         key+modifier pauses xnee's current action
	   '--pause-key [k m]'         key+modifier resume xnee's paused action
	   '--insert-key [k m]'        key+modifier inserts a meta mark in the log file

        - synchronisation rewritten 

Changes in 1.07
	- version numbering changed (x.yz is used instead of x.y.z)
	- plugin functionality renamed to resource
	- plugin functionality added (plug in dynamic libs)
	- synchronization rewritten
	- force-replay option added
	- replay delay rewritten
	- Xnee can be configured (during configure) to:
	  + exclude buffer verbose
	- print functions replaced by function pointers
	  in dispatch functions, 
	- Added modifier+key binding to pause, resume 
	
Changes in 1.0.6
	- data names can now be more then 10 chars long ... errrh
	- Xnee can be configured to:
	  + exclude verbose mode
	  + gcov compilation
	  + grpof compilation
	- new or modified options:
	  '--print-event-names'   prints all event names and number
	  '--print-request-names' prints all request names and number
	  '--print-event-names'   prints event name or  number
	  '--print-request-names' prints request names or number

Changes in 1.0.6pre1
	- multiple modifiers added
	- data names can be used when setting ranges
	- docs updated with the above changes
	- range setting (when replaying) bug corrected
	- speed increased (removed recording of device event when replying)
	- Xnee is now a GNU package

Changes in 1.0.5
	- Typos corrected in doc/ & README (after GNU review)
	- Fiex parser error (--no_sync ----> --no-sync )
	- Manual corrected (after GNU review)
	- new options added to ease up usage a bit:
	   '--print-event-name' 
	   '--print-error-name' 
	   '--print-reply-name' 
	   '--print-request-name' 
	   '--print-data-name' 
	- info, manuals updated

Changes in 1.0.4