@@ -1,5 +1,5 @@
 AC_INIT(xnee/src/main.c)
-AM_INIT_AUTOMAKE(xnee,1.07.92)
+AM_INIT_AUTOMAKE(xnee,1.07.93)
 
 AC_ARG_ENABLE(verbose,
 [  --enable-verbose       build Xnee with no verbose mode support],
