@@ -1,3 +1,3 @@
-@set UPDATED 17 June 2003
+@set UPDATED 3 September 2003
 @set EDITION 1.07.92
 @set VERSION 1.07.92
